# Checkers-SFML

./: Bot.cpp  Bot.h  Button.cpp  Button.h  CMakeLists.txt  EasyBot.cpp  EasyBot.h  GameManager.cpp  GameManager.h  Globals.h  HardBot.cpp  HardBot.h  MediumBot.cpp  MediumBot.h  SearchTree.h  SearchTreeNode.cpp  SearchTreeNode.h  main.cpp
